make mobile friendly

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             take control of our relationship, we can be together until the end
             of our lives, even after death.
             <br />
-            Here's to many more anniversaries, food and laugther memories, and
+            Here's to many more anniversaries, food and laughter memories, and
             love!
           </p>
           <p>
